// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <figure
        class="polaroidFrame"
        data-testid="polaroid"
      >
        <img
          class="polaroidImage"
          data-nimg="1"
          decoding="async"
          height="300"
          loading="lazy"
          src="/_next/image?url=%2Fpicture.jpg&w=640&q=75"
          srcset="/_next/image?url=%2Fpicture.jpg&w=384&q=75 1x, /_next/image?url=%2Fpicture.jpg&w=640&q=75 2x"
          style="color: transparent;"
          width="300"
        />
        <div
          class="polaroidLinks"
        >
          <a
            class="buttonLink"
            data-testid="button"
            href="test-link"
          >
            Test Link
          </a>
        </div>
        <figcaption
          class="polaroidName"
        >
          Test Caption
        </figcaption>
      </figure>
    </div>
  </body>,
  "container": <div>
    <figure
      class="polaroidFrame"
      data-testid="polaroid"
    >
      <img
        class="polaroidImage"
        data-nimg="1"
        decoding="async"
        height="300"
        loading="lazy"
        src="/_next/image?url=%2Fpicture.jpg&w=640&q=75"
        srcset="/_next/image?url=%2Fpicture.jpg&w=384&q=75 1x, /_next/image?url=%2Fpicture.jpg&w=640&q=75 2x"
        style="color: transparent;"
        width="300"
      />
      <div
        class="polaroidLinks"
      >
        <a
          class="buttonLink"
          data-testid="button"
          href="test-link"
        >
          Test Link
        </a>
      </div>
      <figcaption
        class="polaroidName"
      >
        Test Caption
      </figcaption>
    </figure>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header renders correctly without caption and links 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <figure
        class="polaroidFrame"
        data-testid="polaroid"
      >
        <img
          class="polaroidImage"
          data-nimg="1"
          decoding="async"
          height="300"
          loading="lazy"
          src="/_next/image?url=%2Fpicture.jpg&w=640&q=75"
          srcset="/_next/image?url=%2Fpicture.jpg&w=384&q=75 1x, /_next/image?url=%2Fpicture.jpg&w=640&q=75 2x"
          style="color: transparent;"
          width="300"
        />
      </figure>
    </div>
  </body>,
  "container": <div>
    <figure
      class="polaroidFrame"
      data-testid="polaroid"
    >
      <img
        class="polaroidImage"
        data-nimg="1"
        decoding="async"
        height="300"
        loading="lazy"
        src="/_next/image?url=%2Fpicture.jpg&w=640&q=75"
        srcset="/_next/image?url=%2Fpicture.jpg&w=384&q=75 1x, /_next/image?url=%2Fpicture.jpg&w=640&q=75 2x"
        style="color: transparent;"
        width="300"
      />
    </figure>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header renders correctly without caption and with links 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <figure
        class="polaroidFrame"
        data-testid="polaroid"
      >
        <img
          class="polaroidImage"
          data-nimg="1"
          decoding="async"
          height="300"
          loading="lazy"
          src="/_next/image?url=%2Fpicture.jpg&w=640&q=75"
          srcset="/_next/image?url=%2Fpicture.jpg&w=384&q=75 1x, /_next/image?url=%2Fpicture.jpg&w=640&q=75 2x"
          style="color: transparent;"
          width="300"
        />
        <div
          class="polaroidLinks"
        >
          <a
            class="buttonLink"
            data-testid="button"
            href="test-link"
          >
            Test Link
          </a>
        </div>
      </figure>
    </div>
  </body>,
  "container": <div>
    <figure
      class="polaroidFrame"
      data-testid="polaroid"
    >
      <img
        class="polaroidImage"
        data-nimg="1"
        decoding="async"
        height="300"
        loading="lazy"
        src="/_next/image?url=%2Fpicture.jpg&w=640&q=75"
        srcset="/_next/image?url=%2Fpicture.jpg&w=384&q=75 1x, /_next/image?url=%2Fpicture.jpg&w=640&q=75 2x"
        style="color: transparent;"
        width="300"
      />
      <div
        class="polaroidLinks"
      >
        <a
          class="buttonLink"
          data-testid="button"
          href="test-link"
        >
          Test Link
        </a>
      </div>
    </figure>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header renders correctly without links 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <figure
        class="polaroidFrame"
        data-testid="polaroid"
      >
        <img
          class="polaroidImage"
          data-nimg="1"
          decoding="async"
          height="300"
          loading="lazy"
          src="/_next/image?url=%2Fpicture.jpg&w=640&q=75"
          srcset="/_next/image?url=%2Fpicture.jpg&w=384&q=75 1x, /_next/image?url=%2Fpicture.jpg&w=640&q=75 2x"
          style="color: transparent;"
          width="300"
        />
        <figcaption
          class="polaroidName"
        >
          Test Caption
        </figcaption>
      </figure>
    </div>
  </body>,
  "container": <div>
    <figure
      class="polaroidFrame"
      data-testid="polaroid"
    >
      <img
        class="polaroidImage"
        data-nimg="1"
        decoding="async"
        height="300"
        loading="lazy"
        src="/_next/image?url=%2Fpicture.jpg&w=640&q=75"
        srcset="/_next/image?url=%2Fpicture.jpg&w=384&q=75 1x, /_next/image?url=%2Fpicture.jpg&w=640&q=75 2x"
        style="color: transparent;"
        width="300"
      />
      <figcaption
        class="polaroidName"
      >
        Test Caption
      </figcaption>
    </figure>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
